fix navbar behind article date

--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-	z-index: 2;
+	z-index: 3;
 	@include padding(4px, 0px, 4px, 0px);
 
 	&-navigation {
